flowc/tests/fixtures/check_e154_terminal_not_last.flow
type Plan = { id: string, cost: int }

tool best_plans() -> [Plan]
  effect deterministic

flow demo(Plan) -> Plan {
  p = best_plans()
    | pick using primary
    | rank cost asc
  p
}
